2003-01-02  David Hollis <dhollis@davehollis.com>

	* libgda.spec.in: added build requirements for gda-sqlite and man page
	for gda-config-tool.

2002-12-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* acconfig.h: s/INTERBASE/FIREBIRD.

	* providers/interbase/*: moved...

	* providers/firebird/*: ...to here, since we will be supporting
	FireBird, the community-based version of Interbase.

2002-12-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model.c (gda_data_model_describe_column): don't call
	gda_data_model_get_column_title, to avoid circular calls between the 2
	functions. Should fix #102131.

	* libgda/gda-table.[ch] (gda_table_get_name, gda_table_set_name):
	new functions.

	* providers/mdb/gda-mdb-table.[ch]: added implementation of data
	data models based on the tables from the MdbHandle structure.

	* providers/mdb/gda-mdb-provider.c (get_mdb_tables): use correct
	value types for schema data model.

	* providers/mdb/util.c (gda_mdb_type_to_gda): new function.

2002-12-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mdb/gda-mdb-provider.c (gda_mdb_provider_supports): added
	implemention for provider method.

2002-12-27  Vivien Malerba <malerba@gnome-db.org>

       * providers/postgres/gda-postgres-provider.c: merged a patch provided
       by Santi Camps for bug #101642

2002-12-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mdb/gda-mdb-provider.c (get_mdb_types): implemented TYPES
	schema.

2002-12-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mdb/gda-mdb-provider.c (gda_mdb_provider_get_database,
	gda_mdb_provider_change_database, gda_mdb_provider_create_database,
	gda_mdb_provider_drop_database): added missing methods.
	(get_mdb_tables): included all missing schema information.

	* libgda/gda-table.c: fixed typo in PARENT_TYPE #define (now really
	subclassing GdaDataModelArray, and not GdaDataModel.

2002-12-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/xbase/gda-xbase-provider.c