@@ -1,0 +1,52 @@
+.\" 
+.\" gda-config man page
+.\" (C) 2003 GNOME Foundation
+.\" Author:
+.\"   Gonzalo Paniagua Javier (gonzalo@gnome-db.org)
+.\"
+.TH gda-config "5" "January 2003" "libgda" "File Formats"
+.SH NAME
+$(sysconfdir)/libgda/config \- libgda global configuration file.
+$(HOME)/.libgda/config \- libgda user configuration file.
+.SH DESCRIPTION
+The config file of libgda is an XML file. The document starts with
+<libgda-config> tag, which contains sections that hold the configured
+database providers for libgda.
+.PP
+The values in the global configuration file are overriden by the ones in the
+user configuration file.
+.PP
+Each <section> has a 'path' attribute whose value \fImust\fP be something like
+"/apps/libgda/Datasources/XXXXXXXX", where XXXXXXXX is the name of the
+database backend (i.e., postgres, mysql,...)
+.PP
+Inside each <section> you can have for <entry> tags with 'name', 'type' and 'value'
+attributes. Valid values for 'name' are: \fIProvider\fP,
+\fIUsername\fP, \fIDSN\fP and \fIDescription\fP. 'type' value is always
+"string" and 'value' contains the value for the given 'name'.
+.SH EXAMPLE
+This is a sample file. You may modify it manually, add/remove sections,...
+.RS
+.sp
+.nf
+<?xml version="1.0"?>
+<libgda-config>
+  <section path="/apps/libgda/Datasources/postgres">
+    <entry name="Provider" type="string" value="PostgreSQL"/>
+    <entry name="Username" type="string" value="gonzalo"/>
+    <entry name="DSN" type="string"
+           value="DATABASE=test;USER=gonzalo"/>
+    <entry name="Description" type="string"
+           value="Mi favourite provider"/>
+  </section>
+</libgda-config>
+.fi
+.sp
+.RE
+You can also use \fBgda-config-tool\fR or \fBmergeant\fR (recommended) to modify
+this file.
+.SH SEE ALSO
+.BR mergeant (1),
+.BR gda-config-tool (1)
+
+
