@@ -1,3 +1,8 @@
+2003-01-04  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
+
+	* tools/Makefile.am: added gda-config.5.
+	* tools/gda-config.5: manual page for configuration file.
+
 2003-01-02  David Hollis <dhollis@davehollis.com>
 
 	* libgda.spec.in: added build requirements for gda-sqlite and man page
